@@ -8,10 +8,10 @@ import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import fr.inria.corese.sparql.exceptions.EngineException;
 import fr.inria.corese.sparql.triple.cst.RDFS;
 import fr.inria.corese.sparql.triple.parser.*;
 import fr.inria.corese.compiler.api.QueryVisitor;
+import fr.inria.corese.compiler.eval.Interpreter;
 import fr.inria.corese.sparql.triple.parser.Dataset;
 import fr.inria.corese.sparql.compiler.java.JavaCompiler;
 import fr.inria.corese.kgram.api.core.*;
@@ -24,10 +24,10 @@ import fr.inria.corese.kgram.core.Sorter;
 import fr.inria.corese.kgram.tool.Message;
 import fr.inria.corese.compiler.federate.FederateVisitor;
 import fr.inria.corese.compiler.eval.QuerySolver;
+import fr.inria.corese.compiler.eval.QuerySolverVisitor;
 import fr.inria.corese.compiler.visitor.MetadataVisitor;
 import fr.inria.corese.sparql.api.IDatatype;
-import fr.inria.corese.sparql.triple.parser.Access.Feature;
-import fr.inria.corese.sparql.triple.parser.Access.Level;
+import fr.inria.corese.sparql.exceptions.EngineException;
 import java.io.IOException;
 import java.util.HashMap;
 
@@ -82,7 +82,7 @@ public class Transformer implements ExpType {
     public static final String FEDERATE = NSManager.KGRAM + "federate";
     int count = 0;
     CompilerFactory fac;
-    FunctionCompiler funCompiler;
+    private FunctionCompiler functionCompiler;
     Compiler compiler;
     private QuerySolver sparql;
     List<QueryVisitor> visit;
@@ -119,7 +119,7 @@ public class Transformer implements ExpType {
         fac = new CompilerFacKgram();
         compiler = fac.newInstance();
         subQueryList = new ArrayList<>();
-        funCompiler = new FunctionCompiler(this);
+        functionCompiler = new FunctionCompiler(this);
     }
 
     Transformer(CompilerFactory f) {
@@ -141,7 +141,11 @@ public class Transformer implements ExpType {
      */
     void init() {
         if (Processor.getAST() != null) {
-            Query q = transform(Processor.getAST());
+            try {
+                Query q = transform(Processor.getAST());
+            } catch (EngineException ex) {
+                java.util.logging.Logger.getLogger(Transformer.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
+            }
         }
     }
 
@@ -177,9 +181,13 @@ public class Transformer implements ExpType {
         return transform(squery, false);
     }
 
+    /**
+     * TODO: throw  EngineException when there are undefined functions ?
+     */
     public Query transform(String squery, boolean isRule) throws EngineException {
         ast = parse(squery, isRule);
         Query q = transform(ast);
+        //System.out.println("Tr: " + ast.getErrors());
         return q;
     }
     
@@ -210,7 +218,7 @@ public class Transformer implements ExpType {
     /**
      * Transform for a (outer) query (not a subquery)
      */
-    public Query transform(ASTQuery ast) {
+    public Query transform(ASTQuery ast) throws EngineException {
         this.ast = ast;
         ast.setSPARQLCompliant(isSPARQLCompliant);
         if (isSPARQLCompliant) {
@@ -261,7 +269,7 @@ public class Transformer implements ExpType {
         // compile select filters
         q = transform(q, ast);
         
-        funCompiler.compile(q, ast);
+        getFunctionCompiler().compile(q, ast);
         //functionCompiler(q, ast);
         //compileFunction(q, ast);
         //define(q, ast);        
@@ -280,7 +288,7 @@ public class Transformer implements ExpType {
      /**
      * Also used by QueryGraph to compile RDF Graph as a Query
      */
-    public Query transform(Query q, ASTQuery ast) {
+    public Query transform(Query q, ASTQuery ast) throws EngineException {
 
         compiler.setAST(ast);
 
@@ -364,9 +372,14 @@ public class Transformer implements ExpType {
                 q.setLock(false);
             }
         }
+        // @public @update event function ...
+        if (QuerySolver.isVisitorable()
+         && Interpreter.getExtension().getMetadata(QuerySolverVisitor.UPDATE, QuerySolverVisitor.UPDATE_ARITY) != null) {
+            q.setDetail(true);
+        } 
     }
     
-    void toJava(ASTQuery ast){
+    void toJava(ASTQuery ast) throws EngineException{
         if (ast.hasMetadata(Metadata.COMPILE)){
             String name = ast.getMetadata().getValue(Metadata.COMPILE);
             JavaCompiler jc = new JavaCompiler(name);
@@ -402,18 +415,14 @@ public class Transformer implements ExpType {
             for (String name : ast.getMetadata().getValues(Metadata.VISITOR)) {
                 try {
                     Class visClass = Class.forName(name);
-                    Object obj = visClass.newInstance();
+                    Object obj = visClass.getDeclaredConstructor().newInstance();
                     if (obj instanceof QueryVisitor) {
                         add((QueryVisitor) obj);
                     }
                     else {
                         logger.error("Undefined QueryVisitor: " + name);
                     }
-                } catch (ClassNotFoundException ex) {
-                    logger.error("Undefined QueryVisitor: " + name);
-                } catch (InstantiationException ex) {
-                    logger.error("Undefined QueryVisitor: " + name);
-                } catch (IllegalAccessException ex) {
+                } catch (Exception ex) {
                     logger.error("Undefined QueryVisitor: " + name);
                 }
             }
@@ -535,7 +544,7 @@ public class Transformer implements ExpType {
         return false;
     }
 
-    private void template(Query q, ASTQuery ast) {
+    private void template(Query q, ASTQuery ast) throws EngineException {
         if (ast.isTemplate()) {
             q.setTemplate(true);
             q.setProfile(ast.getProfile());
@@ -560,7 +569,7 @@ public class Transformer implements ExpType {
         }
     }
     
-    void error(Query q, ASTQuery ast) {
+    void error(Query q, ASTQuery ast) throws EngineException {
         if (ast.isFail()) {
             q.setFail(true);
         }
@@ -568,21 +577,20 @@ public class Transformer implements ExpType {
             // TODO: because template st:profile may not have been read yet ...
             return;
         }
-        funCompiler.undefinedFunction(q, ast);
+        getFunctionCompiler().undefinedFunction(q, ast);
     }
     
     
-
+    public void imports(Query q, String path) throws EngineException {
+        getFunctionCompiler().imports(q, (ASTQuery) q.getAST(), path);
+    }
     
-    public boolean getLinkedFunction(String label) {
-        if (Access.reject(Feature.LINKED_FUNCTION, Level.DEFAULT)) { //(! isLinkedFunction()){
-            return false;
-        }
-        return funCompiler.getLinkedFunctionBasic(label);
+    public boolean getLinkedFunction(String label) throws EngineException {
+        return getFunctionCompiler().getLinkedFunction(label);
     }
         
-    public boolean getLinkedFunctionBasic(String label) {
-        return funCompiler.getLinkedFunctionBasic(label);
+    public boolean getLinkedFunctionBasic(String label) throws EngineException {
+        return getFunctionCompiler().getLinkedFunctionBasic(label);
     }
     
     public static void removeLinkedFunction() {
@@ -594,13 +602,13 @@ public class Transformer implements ExpType {
      * st:profile does not export to Interpreter hence it uses isDefine = false
      */
     public void definePublic(ASTExtension ext, Query q, boolean isDefine) {
-        funCompiler.definePublic(ext, q, isDefine);
+        getFunctionCompiler().definePublic(ext, q, isDefine);
     }
     
 
 
 
-    void construct(Query q, ASTQuery ast) {
+    void construct(Query q, ASTQuery ast) throws EngineException {
         validate(ast.getInsert(), ast);
         Exp cons = compile(ast.getInsert(), false);
         q.setConstruct(cons);
@@ -618,7 +626,7 @@ public class Transformer implements ExpType {
      * For query and subquery Generate a new compiler for each (sub) query in
      * order to get fresh new nodes
      */
-    Query compile(ASTQuery ast) {
+    Query compile(ASTQuery ast) throws EngineException {
         Exp ee = compile(ast.getExtBody(), false);
         Query q = Query.create(ee);
         q.setUseBind(isUseBind);
@@ -637,13 +645,13 @@ public class Transformer implements ExpType {
     /**
      * Subquery is a construct where
      */
-    Query constructQuery(ASTQuery ast) {
+    Query constructQuery(ASTQuery ast) throws EngineException {
         Transformer t = Transformer.create();
         t.setAlgebra(isAlgebra());
         return t.transform(ast);
     }
     
-    Query updateQuery(ASTQuery ast) {
+    Query updateQuery(ASTQuery ast) throws EngineException {
         Query q = constructQuery(ast);
         return q;
     }
@@ -652,7 +660,7 @@ public class Transformer implements ExpType {
      * subquery is compiled using a new compiler to get fresh new nodes to
      * prevent type inference on nodes between outer and sub queries
      */
-    Query compileQuery(ASTQuery ast) {
+    Query compileQuery(ASTQuery ast) throws EngineException {
         // new
         Compiler save = compiler;
         compiler = fac.newInstance();
@@ -677,11 +685,11 @@ public class Transformer implements ExpType {
         return q;
     }
 
-    Exp compileBind(ASTQuery ast, Binding b) {
+    Exp compileBind(ASTQuery ast, Binding b) throws EngineException {
         return compileBind(ast, b.getFilter(), b.getVariable());
     }
 
-    Exp compileBind(ASTQuery ast, Expression e, Variable var) {
+    Exp compileBind(ASTQuery ast, Expression e, Variable var) throws EngineException {
         fr.inria.corese.kgram.api.core.Filter f = compileSelect(e, ast);
         Node node = compiler.createNode(var);
         Exp exp = Exp.create(BIND);
@@ -696,7 +704,7 @@ public class Transformer implements ExpType {
     /**
      * Delete/Insert/Construct
      */
-    Exp compile(ASTQuery ast, fr.inria.corese.sparql.triple.parser.Exp exp) {
+    Exp compile(ASTQuery ast, fr.inria.corese.sparql.triple.parser.Exp exp) throws EngineException {
         Compiler save = compiler;
         compiler = fac.newInstance();
         compiler.setAST(ast);
@@ -712,7 +720,7 @@ public class Transformer implements ExpType {
      * Compile service as a subquery if it is a pattern and as a subquery if it
      * already is one
      */
-    Exp compileService(Service service) {
+    Exp compileService(Service service) throws EngineException {
         Node src = compile(service.getServiceName());
         Exp node = Exp.create(NODE, src);
               
@@ -880,11 +888,11 @@ public class Transformer implements ExpType {
         return Mapping.safeCreate(lNode, nodes);
     }
 
-    Exp construct(ASTQuery ast) {
+    Exp construct(ASTQuery ast) throws EngineException {
         return compile(ast, ast.getInsert());
     }
 
-    Exp delete(ASTQuery ast) {
+    Exp delete(ASTQuery ast) throws EngineException {
         return compile(ast, ast.getDelete());
     }
 
@@ -896,7 +904,7 @@ public class Transformer implements ExpType {
         return compiler;
     }
 
-    void complete(Query qCurrent, ASTQuery ast) {
+    void complete(Query qCurrent, ASTQuery ast) throws EngineException {
         qCurrent.collect();
         //qCurrent.setSelectFun(select(qCurrent, ast));
         select(qCurrent, ast);
@@ -931,7 +939,7 @@ public class Transformer implements ExpType {
 
     }
 
-    void path(Query q, ASTQuery ast) {
+    void path(Query q, ASTQuery ast) throws EngineException {
         if (ast.getRegexTest().size() > 0) {
             Node node = compiler.createNode(Variable.create(THIS));
             q.setPathNode(node);
@@ -943,7 +951,7 @@ public class Transformer implements ExpType {
         }
     }
 
-    void having(Query q, ASTQuery ast) {
+    void having(Query q, ASTQuery ast) throws EngineException {
         if (ast.getHaving() != null) {
             //Filter having = compile(ast.getHaving());			
             fr.inria.corese.kgram.api.core.Filter having = compileSelect(ast.getHaving(), ast);
@@ -957,7 +965,7 @@ public class Transformer implements ExpType {
      * node from scratch for ?var This function is called - once for each
      * subquery - once for the global query
      */
-    List<Exp> select(Query qCurrent, ASTQuery ast) {
+    List<Exp> select(Query qCurrent, ASTQuery ast) throws EngineException {
         List<Exp> select = new ArrayList<>();
         // list of query nodes created for variables in filter that need
         // an outer node value
@@ -1036,7 +1044,7 @@ public class Transformer implements ExpType {
         }
     }
 
-    void aggregate(Query qCurrent, Exp exp, Expression ee, List<Exp> list) {
+    void aggregate(Query qCurrent, Exp exp, Expression ee, List<Exp> list) throws EngineException {
         if (exp.isAggregate()) {
             // process  min(?l, groupBy(?x, ?y))
             extendAggregate(qCurrent, exp, ee);
@@ -1068,7 +1076,7 @@ public class Transformer implements ExpType {
     /**
      * min(?l, groupBy(?x, ?y))
      */
-    void extendAggregate(Query qCurrent, Exp exp, Expression ee) {
+    void extendAggregate(Query qCurrent, Exp exp, Expression ee) throws EngineException {
         if (ee.isAggregate() && ee.arity() > 1) {
             Expression g = ee.getArg(ee.arity() - 1);
             if (g.oper() == ExprType.GROUPBY) {
@@ -1167,7 +1175,7 @@ public class Transformer implements ExpType {
         return false;
     }
 
-    List<Exp> orderBy(Query qCurrent, ASTQuery ast) {
+    List<Exp> orderBy(Query qCurrent, ASTQuery ast) throws EngineException {
         List<Exp> order = orderBy(qCurrent, ast.getSort(), ast);
         if (order.size() > 0) {
             int n = 0;
@@ -1179,13 +1187,13 @@ public class Transformer implements ExpType {
         return order;
     }
 
-    List<Exp> groupBy(Query qCurrent, ASTQuery ast) {
+    List<Exp> groupBy(Query qCurrent, ASTQuery ast) throws EngineException {
         List<Exp> list = orderBy(qCurrent, ast.getGroupBy(), ast);
         qCurrent.setConnect(ast.isConnex());
         return list;
     }
 
-    List<Exp> orderBy(Query qCurrent, List<Expression> input, ASTQuery ast) {
+    List<Exp> orderBy(Query qCurrent, List<Expression> input, ASTQuery ast) throws EngineException {
         List<Exp> list = new ArrayList<Exp>();
 
         for (Expression ee : input) {
@@ -1258,11 +1266,11 @@ public class Transformer implements ExpType {
      * Compile AST statements into KGRAM statements Compile triple into Edge,
      * filter into Filter
      */
-    Exp compile(fr.inria.corese.sparql.triple.parser.Exp query, boolean opt) {
+    Exp compile(fr.inria.corese.sparql.triple.parser.Exp query, boolean opt) throws EngineException {
         return compile(query, opt, 0);
     }
 
-    Exp compile(fr.inria.corese.sparql.triple.parser.Exp query, boolean opt, int level) {
+    Exp compile(fr.inria.corese.sparql.triple.parser.Exp query, boolean opt, int level) throws EngineException {
 
         Exp exp = null;
         int type = getType(query);
@@ -1374,7 +1382,7 @@ public class Transformer implements ExpType {
        return (isBGP()) ? BGP : AND;
     }
     
-    Exp compileEdge(Triple t, boolean opt) {
+    Exp compileEdge(Triple t, boolean opt) throws EngineException {
         Edge r = compiler.compile(t, ast.isInsertData());
         Exp exp = Exp.create(EDGE, r);
 
@@ -1398,7 +1406,7 @@ public class Transformer implements ExpType {
         return exp;
     }
 
-    void path(Triple tt, Exp exp) {
+    void path(Triple tt, Exp exp) throws EngineException {
         exp.setType(PATH);
         Expression regex = tt.getRegex();
         if (regex == null) {
@@ -1414,7 +1422,7 @@ public class Transformer implements ExpType {
      *
      * Generate rdf:type/rdfs:subClassOf*
      */
-    Exp pathType(ASTQuery ast, Triple t) {
+    Exp pathType(ASTQuery ast, Triple t) throws EngineException {
         Expression re = Term.create(Term.RE_SEQ,
                 ast.createQName(RDFS.rdftype),
                 Term.function(Term.STAR, ast.createQName(RDFS.rdfssubclassof)));
@@ -1429,7 +1437,7 @@ public class Transformer implements ExpType {
     /**
      * Complete compilation
      */
-    Exp complete(Exp exp, fr.inria.corese.sparql.triple.parser.Exp srcexp, boolean opt) {
+    Exp complete(Exp exp, fr.inria.corese.sparql.triple.parser.Exp srcexp, boolean opt) throws EngineException {
         // complete path (deprecated)
         path(exp);
 
@@ -1454,7 +1462,7 @@ public class Transformer implements ExpType {
     /**
      * graph kg:describe BGP -> bind(kg:describe() as ?g) graph ?g BGP
      */
-    Exp compileGraph(ASTQuery ast, Exp exp, Source srcexp) {
+    Exp compileGraph(ASTQuery ast, Exp exp, Source srcexp) throws EngineException {
         Atom at = srcexp.getSource();
         Atom nat = getSrc(at);
         Exp gr = compileGraph(exp, nat);
@@ -1490,7 +1498,7 @@ public class Transformer implements ExpType {
         return exp;
     }
 
-    Exp compileFilter(Expression ee, boolean opt) {
+    Exp compileFilter(Expression ee, boolean opt) throws EngineException {
         List<fr.inria.corese.kgram.api.core.Filter> qvec = compiler.compileFilter(ee);
         Exp exp;
 
@@ -1515,7 +1523,7 @@ public class Transformer implements ExpType {
     /**
      * Rewrite fun() as ?var in exp Compile exists {}
      */
-    fr.inria.corese.kgram.api.core.Filter compile(Expression exp) {
+    fr.inria.corese.kgram.api.core.Filter compile(Expression exp) throws EngineException {
         fr.inria.corese.kgram.api.core.Filter f = compiler.compile(exp);
         compileExist(f.getExp(), false);
         return f;
@@ -1524,7 +1532,7 @@ public class Transformer implements ExpType {
     /**
      * Do not rewrite fun() as var
      */
-    fr.inria.corese.kgram.api.core.Filter compileSelect(Expression exp, ASTQuery ast) {
+    fr.inria.corese.kgram.api.core.Filter compileSelect(Expression exp, ASTQuery ast) throws EngineException {
         fr.inria.corese.kgram.api.core.Filter f = exp.compile(ast);
         compileExist(f.getExp(), false);
         return f;
@@ -1533,7 +1541,7 @@ public class Transformer implements ExpType {
     /**
      * filter(exist {PAT})
      */
-    void compileExist(Expr exp, boolean opt) {
+    void compileExist(Expr exp, boolean opt) throws EngineException {
         if (exp.oper() == ExprType.EXIST) {
             Term term = (Term) exp;
             Exp pat = compile(term.getExist(), opt);
@@ -1550,7 +1558,7 @@ public class Transformer implements ExpType {
     /**
      * Assign pathLength($path) <= 10 to its path
      */
-    void path(Exp exp) {
+    void path(Exp exp) throws EngineException {
         for (Exp ee : exp) {
             if (ee.isPath()) {
                 for (Exp ff : exp) {
@@ -1572,7 +1580,7 @@ public class Transformer implements ExpType {
      * Check if filter f concerns path e for regex, mode, min, max store them in
      * Exp e
      */
-    void processPath(Exp exp, Exp ef) {
+    void processPath(Exp exp, Exp ef) throws EngineException {
         fr.inria.corese.kgram.api.core.Filter f = ef.getFilter();
         Edge e = exp.getEdge();
         Node n = e.getEdgeVariable();
@@ -1675,8 +1683,13 @@ public class Transformer implements ExpType {
         ASTQuery aa = new Checker(ast).check(tt);
         if (aa != null) {
             Transformer tr = Transformer.create();
-            Query qq = tr.transform(aa);
-            add(edge, qq);
+            Query qq;
+            try {
+                qq = tr.transform(aa);
+                add(edge, qq);
+            } catch (EngineException ex) {
+                java.util.logging.Logger.getLogger(Transformer.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
+            }
         }
     }
 
@@ -1689,7 +1702,7 @@ public class Transformer implements ExpType {
      * stored in a table, we can have several predefined filters pathNode()
      * generate a blank node for each path (PathFinder)
      */
-    void filters(Query q) {
+    void filters(Query q) throws EngineException {
         ASTQuery ast = (ASTQuery) q.getAST();
 
         Term t = Term.function(Processor.PATHNODE);
@@ -1860,20 +1873,6 @@ public class Transformer implements ExpType {
     }
 
     /**
-     * @return the LoadFunction
-     */
-    public boolean isLinkedFunction() {
-        return isLoadFunction;
-    }
-
-    /**
-     * @param LoadFunction the LoadFunction to set
-     */
-    public void setLinkedFunction(boolean LoadFunction) {
-        this.isLoadFunction = LoadFunction;
-    }
-
-    /**
      * @return the serviceList
      */
     public List<Atom> getServiceList() {
@@ -1885,5 +1884,19 @@ public class Transformer implements ExpType {
      */
     public void setServiceList(List<Atom> serviceList) {
         this.serviceList = serviceList;
+    }
+
+    /**
+     * @return the functionCompiler
+     */
+    public FunctionCompiler getFunctionCompiler() {
+        return functionCompiler;
+    }
+
+    /**
+     * @param functionCompiler the functionCompiler to set
+     */
+    public void setFunctionCompiler(FunctionCompiler functionCompiler) {
+        this.functionCompiler = functionCompiler;
     }
 }
